--- a/s3_website.yml
+++ b/s3_website.yml
@@ -1,4 +1,4 @@
-site: TimelineJS3/compiled
+site: TimelineJS3/custom
 s3_id: <%= ENV['S3_ACCESS_KEY_ID'] %>
 s3_secret: <%= ENV['S3_SECRET_KEY'] %>
 s3_bucket: <%= ENV['S3_BUCKET'] %>
